<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:text="@string/expense"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/title"
            android:layout_alignStart="@+id/title"
            android:layout_below="@+id/title"
            android:layout_marginTop="22dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/description" />

        <TextView
            android:id="@+id/notesTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/description"
            android:layout_alignStart="@+id/description"
            android:layout_below="@+id/description"
            android:layout_marginTop="48dp"
            android:text="@string/notesTitle"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/notesTitle"
            android:layout_alignStart="@+id/notesTitle"
            android:layout_centerVertical="true"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/notes" />

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="39dp"
            android:layout_marginStart="39dp"
            android:layout_marginTop="86dp"
            android:text="@string/save"
            android:layout_below="@+id/notes"
            android:layout_alignLeft="@+id/notes"
            android:layout_alignStart="@+id/notes" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_alignBaseline="@+id/save"
            android:layout_alignBottom="@+id/save"
            android:layout_toRightOf="@+id/notes"
            android:layout_toEndOf="@+id/notes" />
    </RelativeLayout>
</LinearLayout>